[package]
name = "viktor_rust_diplom"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }
num-complex = "0.4"
futures = "0.3"


[profile.flamegraph-release]
inherits = "release"
debug=true

[profile.release-optimized]
inherits = "release" 
lto="fat"
codegen-units=1
